# A-Hybrid-Regime-Switching-SDE-Framework-for-Bitcoin-Futures

./: .gitignore  README.md  notebook.ipynb  pyproject.toml  run_analyze_results.py  run_backtester.py  run_data_collector.py  run_event_detector.py
benchmarks/: buy_and_hold.py  garch.py
configs/: backtest_settings.toml  data_settings.toml  model_parameters.toml  training_settings.toml
data/: btcusdt_future.csv  events.toml
results/: garch_trade_results.csv  params_summary.csv  results.csv  sde_trade_results.csv
src/: configuration_loader.py  data_collector.py
src/data/: data_collector.py  dataset_builder.py  event_detector.py  preprocessor.py
src/engines/: backtester.py
src/models/: sde_model.py
src/utils/: configuration_loader.py  performance_analyzer.py  signal_processing.py
src/visualization/: plotter.py
