[project]
name = "bitcoin-futures-sde"
version = "0.1.0"
description = "A Hybrid Regime-Switching SDE Framework for Bitcoin Futures"
authors = [
    {name = "rpycgo",email = "skyd0608@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "arch (>=8.0.0,<9.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "lightweight-charts (>=2.1,<3.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "pymc (>=5.27.1,<6.0.0)",
    "arviz (>=0.23.4,<0.24.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "tomli-w (>=1.2.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
